[gd_scene load_steps=4 format=3 uid="uid://dnbulb6vix5l1"]

[ext_resource type="Script" path="res://Bugs/Gnats/gnat.gd" id="1_efcg3"]
[ext_resource type="Texture2D" uid="uid://bq28yi7a1xctv" path="res://Art/WhiteTexture.png" id="2_4iq20"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w7en2"]
radius = 15.0

[node name="Gnat" type="Node2D"]
script = ExtResource("1_efcg3")
metadata/_edit_group_ = true

[node name="InitialSpawnPoint" type="Marker2D" parent="."]

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="GnatBody" type="CharacterBody2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="GnatBody"]
texture = ExtResource("2_4iq20")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GnatBody"]
shape = SubResource("CircleShape2D_w7en2")
debug_color = Color(0.768627, 0.313726, 0, 1)

[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
